--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,7 +3,10 @@
   "robotLength": 0.75,
   "holonomicMode": true,
   "pathFolders": [],
-  "autoFolders": [],
+  "autoFolders": [
+    "CD Start",
+    "üst olup çöpe giden babayiğitler"
+  ],
   "defaultMaxVel": 4.2,
   "defaultMaxAccel": 9.0,
   "defaultMaxAngVel": 540.0,
