--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -5,6 +5,7 @@
   "pathFolders": [],
   "autoFolders": [
     "CD Start",
+    "Mid Start",
     "üst olup çöpe giden babayiğitler"
   ],
   "defaultMaxVel": 4.2,
