son halinden baya bi uzak l2 li pathlerrrrrrrrrrrrrrrrr

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -6,6 +6,7 @@
   "autoFolders": [
     "CD Start",
     "Mid Start",
+    "EF Start",
     "üst olup çöpe giden babayiğitler"
   ],
   "defaultMaxVel": 4.2,
