--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,6 +1,6 @@
 {
-  "robotWidth": 0.75,
-  "robotLength": 0.75,
+  "robotWidth": 0.854,
+  "robotLength": 0.854,
   "holonomicMode": true,
   "pathFolders": [],
   "autoFolders": [
@@ -14,23 +14,23 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 65.0,
-  "robotMOI": 6.883,
+  "robotMass": 60.5,
+  "robotMOI": 7.37116875,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.05,
   "driveGearing": 7.13,
-  "maxDriveSpeed": 4.2,
+  "maxDriveSpeed": 4.32816,
   "driveMotorType": "krakenX60FOC",
   "driveCurrentLimit": 50.0,
   "wheelCOF": 1.2,
-  "flModuleX": 0.283,
-  "flModuleY": 0.283,
-  "frModuleX": 0.283,
-  "frModuleY": -0.283,
-  "blModuleX": -0.283,
-  "blModuleY": 0.283,
-  "brModuleX": -0.283,
-  "brModuleY": -0.283,
+  "flModuleX": 0.27300047,
+  "flModuleY": 0.27300047,
+  "frModuleX": 0.27300047,
+  "frModuleY": -0.27300047,
+  "blModuleX": -0.27300047,
+  "blModuleY": 0.27300047,
+  "brModuleX": -0.27300047,
+  "brModuleY": -0.27300047,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
